--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 			<version>3.12.14</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
 
 	</dependencies>
 
